Add copyright headers to all files